--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=restcruddeno
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=
+spring.datasource.password=
 
